@@ -1,3 +1,8 @@
+Tue Feb 18 23:34:19 GMT 2014  Olly Betts <olly@survex.com>
+
+	* api/replication.cc: Fix conditional for enabling replication code
+	  - if chert is disabled but brass isn't, we should still enable it.
+
 Tue Feb 18 01:33:28 GMT 2014  Olly Betts <olly@survex.com>
 
 	* tests/api_replicate.cc: Move comment to in front of the function it
